test_suite/ui/with_fields.rs
#[derive(Copy, Clone, enumflags2::BitFlags)]
enum Foo {
    Bar(u32),
}

fn main() {}
